# OTPasswd

./: .emacs.desktop  .gitignore  CMakeLists.txt  CTestCustom.cmake  ChangeLog  Doxyfile  INSTALL  LICENSE  Makefile  README  TODO  build.sh  crypto.c  crypto.h  num.c  num.h  otpasswd.c  otpasswd_actions.c  otpasswd_actions.h  pam_otpasswd.c  passcards.c  passcards.h  ppp.c  ppp.h  pppv3.c  print.c  print.h  state.c  state.h
agent/: actions.c  actions_helpers.c  agent.c  agent_interface.c  agent_interface.h  agent_private.c  agent_private.h  nls.h  request.c  request.h  security.c  security.h  testcases.c  testcases.h
common/: crypto.c  num.c  num.h  print.c  print.h
crypto/: coreutils_sha256.c  coreutils_sha256.h  polarssl_aes.c  polarssl_aes.h
docs/: INSTALL  SECURITY  agent_otp.1  class_diagram.dia  elements_diagram.dia  elements_diagram.eps  otpasswd.1  otpasswd.5  pam_otpasswd.8  security
docs/internal/: readme
examples/: otp.php  otpasswd-login  otpasswd-login_FreeBSD  otpasswd-testcase  otpasswd.conf  otpasswd.conf.dist  otpasswd.conf_new  otpasswd_oob.sh
examples/pam-configs/: otpasswd
libotp/: config.c  config.h  crypto.c  crypto.h  db.c  db.h  db_file.c  db_ldap.c  db_mysql.c  num.c  num.h  passcards.c  passcards.h  ppp.c  ppp.h  ppp_common.h  print.c  print.h  state.c  state.h
pam/: pam_helpers.c  pam_helpers.h  pam_macros.h  pam_otpasswd.c
po/: otpasswd.pot  pl.po
src/: crypto.c  crypto.h  num.c  num.h  otpasswd.c  otpasswd_actions.c  otpasswd_actions.h  pam_otpasswd.c  passcards.c  passcards.h  ppp.c  ppp.h  ppp_common.h  print.c  print.h  state.c  state.h  testcases.c
src/agent/: agent.c  agent_interface.h  agent_private.c  request.c  request.h  security.h  testcases.h
src/common/: crypto.h  num.h  print.h
src/crypto/: coreutils_sha256.h  polarssl_aes.c  slow_aes256.c
src/libotp/: config.c  db_file.c  ppp.c  ppp_common.h  state.c
src/pam/: pam_helpers.c  pam_otpasswd.c
src/utility/: cards.c  cards.h  otpasswd.c
tests/: .gitignore  Makefile  coverage.sh  do_pam_tests.sh  do_tests.sh  pam_test.c  suid.c
tools/: Makefile  build.sh  clean.sh  debian_package.sh  do_pam_tests.sh  do_tests.sh  locale_gen_template.sh  lock.c  package.sh  pam_test.c  splint_agent.sh  test_generate_no.sh  test_generate_yes.sh  test_post.sh  test_pre.sh  test_remove_yes.sh  test_spass.sh  test_warning.sh
tools/debian_pkg_template/: README.Debian  changelog  control  copyright  libpam-otpasswd.dirs  libpam-otpasswd.install  libpam-otpasswd.manpages  libpam-otpasswd.postinst  libpam-otpasswd.prerm  otpasswd-bin.docs  otpasswd-bin.install  otpasswd-bin.manpages  rules  watch
utility/: actions.c  actions.h  actions_helpers.c  actions_helpers.h  agent_interface.c  agent_interface.h  cards.c  nls.h  otpasswd.c  otpasswd_actions.c  otpasswd_actions.h  security.c  security.h  testcases.c  testcases.h
